--- a/base.css
+++ b/base.css
@@ -13,25 +13,22 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* 
 html, body {
   height: 100%;
   margin: 0;
   padding-top: 25px;
 }
-
+ */
 body {
   position: relative;
-  background: url("https://images.wallpaperscraft.com/image/single/headphones_books_education_121501_2560x1440.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+ background:#cdf1d2;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: var(--text);
   z-index: 1;
 }
 
-body::before {
+/* body::before {
   content: "";
   position: fixed;
   top: 0; left: 0;
@@ -39,7 +36,7 @@ body::before {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: -1;
-}
+} */
 
 .container, .admin-container {
   max-width: 80%;
