--- a/base.css
+++ b/base.css
@@ -20,18 +20,16 @@ html, body {
 }
 
 body {
-  min-height: 100vh;
   background: url("https://images.wallpaperscraft.com/image/single/headphones_books_education_121501_2560x1440.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--text);
-  padding: 2rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  overflow-y: auto;
+  justify-content: center;
+  padding-top: 30rem;
 }
+
 /* -------- CONTAINER -------- */
 .container,
 .admin-container {
@@ -309,4 +307,4 @@ tr:hover {
     width: auto;
     justify-content: center;
   }
-}
+} 
