--- a/base.css
+++ b/base.css
@@ -22,8 +22,7 @@ html {
 
 body {
   min-height: 100vh;
-  background: url("https://images.wallpaperscraft.com/image/single/headphones_books_education_121501_2560x1440.jpg");
-  background-size: cover;
+  background-color: #ebf6ed;
   background-position: center;
   background-repeat: no-repeat;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -34,24 +33,7 @@ body {
   padding: 2rem;
 }
 
-/* --- CONTAINER --- */
-.container, .admin-container {
-  max-width: 800px;
-  width: 90%;
-  margin: auto;
-  background: var(--card-bg);
-  padding: 3rem 2.5rem;
-  border-radius: var(--radius);
-  box-shadow: var(--shadow);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.container > *, .admin-container > * {
-  width: 100%;
-  max-width: 600px;
-}
 
 /* --- HEADER --- */
 .dashboard-header {
