--- a/base.css
+++ b/base.css
@@ -277,10 +277,10 @@ tr:hover {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
+/*     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    background-position: center;
+    background-position: center; */
     overflow-x: hidden;
   }
 
